--- a/styles/main.scss
+++ b/styles/main.scss
@@ -42,7 +42,7 @@ p {
 
 .plans-info_container {
     width: 80%;
-    height: 11vh;
+    height: 9vh;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -51,7 +51,7 @@ p {
     border-radius: 10px;
 
     .plans-info_block {
-        padding: 10px 20px 0 0;
+        padding: 20px 20px 0 0;
     }
     .plans-info--title {
         color: $color-neutral-3;
@@ -60,7 +60,7 @@ p {
     }
     
     .plans-info--price {
-        padding: 5px;
+        padding: 2px 0;
         color: $color-neutral-2;
     }
     
