--- a/styles/main.css
+++ b/styles/main.css
@@ -27,11 +27,21 @@ p {
   color: #7280a7;
 }
 
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100vh;
+}
+
 .order-summary_container {
   min-width: 320px;
   max-width: 400px;
   height: auto;
-  margin: 50px auto;
+  margin: 0 auto;
   border-radius: 6%;
   overflow: hidden;
   text-align: center;
@@ -66,20 +76,19 @@ p {
 
 h1 {
   color: #1f2f56;
+  font-size: 2rem;
   font-weight: 900;
   margin: 20px 0;
 }
 
 p {
-  -webkit-margin-after: 10px;
-          margin-block-end: 10px;
   padding: 0 30px;
   line-height: 25px;
 }
 
 .plans-info_container {
   width: 80%;
-  height: 9vh;
+  height: 10vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -89,12 +98,12 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 20px 0;
+  margin: 30px 0 45px 0;
   background-color: #f5f7ff;
   border-radius: 10px;
 }
 .plans-info_container .plans-info_block {
-  padding: 20px 20px 0 0;
+  padding: 0 20px 0 0;
 }
 .plans-info_container .plans-info--title {
   color: #1f2f56;
@@ -119,8 +128,7 @@ p {
 .button-payment {
   width: 80%;
   padding: 15px;
-  -webkit-margin-after: 5px;
-          margin-block-end: 5px;
+  margin: 0 0 5px 0;
   font-size: 1.4rem;
   font-weight: 700;
   border-radius: 10px;
@@ -138,8 +146,8 @@ p {
 .button-cancel {
   width: 80%;
   padding: 15px;
-  -webkit-margin-after: 5px;
-          margin-block-end: 5px;
+  -webkit-margin-after: 10px;
+          margin-block-end: 10px;
   font-size: 1.4rem;
   font-weight: 700;
   border-radius: 10px;
